<?xml version="1.0"?>
<package format="2">
  <name>hero_chassis_control</name>
  <version>0.1.0</version>
  <description>Hero Chassis Controller In Gazebo</description>
  <maintainer email="3229466846@qq.com">Zhanyu Liang</maintainer>
  <license>BSD</license>
  <author email="3229466846@qq.com">Zhanyu Liang</author>
  <author>Zhanyu Liang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslint</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>forward_command_controller</depend>
  <depend>pluginlib</depend>
  <depend>rm_description</depend>
  <depend>realtime_tools</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

  <export>
    <controller_interface plugin="${prefix}/hero_chassis_controller_plugins.xml"/>
  </export>
</package>